--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "express-sanitizer": "^1.0.6",
     "tenorjs": "^1.0.10"
   }
 }
